testing/tests/roundtrip/invalid/semantic/typecheck/tuple_literal_in_aggregate_expr/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/tuple_literal_in_aggregate_expr/input.essence:2:15:
  |
2 | such that min((5, 3)) = 1
  |               ^^^^^^
Type error:
	Expected: "Domain of int-like or matrix of int-like"
	Got: (int, int)

